[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/ClosePanel.gd" type="Script" id=1]
[ext_resource path="res://Sprites/GUI/Panel.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Level/ButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Level/Button.png" type="Texture" id=4]
[ext_resource path="res://Fonts/ArialBlackBig.tres" type="DynamicFont" id=5]

[node name="ClosePanel" type="Sprite"]
position = Vector2( 960, -202 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="MoveTween" type="Tween" parent="."]

[node name="AreYouSure" type="Label" parent="."]
margin_left = -428.0
margin_top = -100.0
margin_right = 1711.0
margin_bottom = 81.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 5 )
text = "Are you sure you want to quit?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="TextureButton" parent="."]
margin_left = -400.0
margin_top = 40.0
margin_right = 210.0
margin_bottom = 272.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="YesButton"]
margin_right = 610.0
margin_bottom = 232.0
custom_fonts/font = ExtResource( 5 )
text = "Yes"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="TextureButton" parent="."]
margin_left = 150.0
margin_top = 40.0
margin_right = 760.0
margin_bottom = 272.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NoButton"]
margin_right = 610.0
margin_bottom = 232.0
custom_fonts/font = ExtResource( 5 )
text = "No"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackScreenTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="pressed" from="YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="timeout" from="BlackScreenTimer" to="." method="_on_BlackScreenTimer_timeout"]
